<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="90dp">

        <Button
            android:id="@+id/btnHome"

            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:paddingLeft="4dp"
            android:background="@drawable/button_navs"
            android:drawableLeft="@drawable/baseline_home_24"
            android:textColor="@android:color/white"
            />

        <Button
            android:id="@+id/btnSelectLanguage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="42dp"
            android:paddingRight="4dp"
            android:drawableRight="@drawable/baseline_language_24"
            android:background="@drawable/button_navs"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/navigationBar"
            android:orientation="horizontal"
            android:paddingLeft="30dp"
            android:paddingTop="45dp"
            tools:ignore="NotSibling">

            <Button
                android:id="@+id/btnAllChannels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:background="@drawable/button_background_selector"
                android:textColor="@color/white"
                android:layout_marginBottom="5dp"
                android:text="@string/all_channels" />

            <Button
                android:id="@+id/btnEntertainment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:background="@drawable/button_background_selector"
                android:textColor="@color/white"
                android:layout_marginBottom="5dp"
                android:text="@string/entertainment" />

            <Button
                android:id="@+id/btnKids"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:background="@drawable/button_background_selector"
                android:textColor="@color/white"
                android:layout_marginBottom="5dp"
                android:text="@string/kids" />

            <Button
                android:id="@+id/btnNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:background="@drawable/button_background_selector"
                android:textColor="@color/white"
                android:layout_marginBottom="5dp"
                android:text="@string/news" />

            <Button
                android:id="@+id/btnMovies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:background="@drawable/button_background_selector"
                android:textColor="@color/white"
                android:layout_marginBottom="5dp"
                android:text="@string/movies" />

            <Button
                android:id="@+id/btnSports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background_selector"
                android:textColor="@color/white"
                android:layout_marginBottom="5dp"
                android:text="@string/sports" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/dark_gray"
        android:orientation="horizontal">

        <GridView
            android:id="@+id/gridViewChannels"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:columnWidth="85dp"
            android:horizontalSpacing="8dp"
            android:numColumns="4"
            android:padding="8dp"
            android:scrollbars="none"
            android:verticalSpacing="8dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/frameLayoutPlayer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="3dp"
                android:layout_marginRight="16dp"
                android:layout_weight="2">

                <com.google.android.exoplayer2.ui.PlayerView
                    android:id="@+id/playerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/black"
                    app:resize_mode="fill" />

                <RelativeLayout
                    android:id="@+id/newsTickerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/news_background"
                    android:padding="8dp"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="5dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/fix_news"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hotel_news"
                        android:textColor="#f01e2c"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/newsTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:ellipsize="marquee"
                        android:layout_toEndOf="@id/fix_news"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:scrollHorizontally="true"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        android:gravity="center_vertical"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/infoBar"
                    android:layout_gravity="bottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/barinfo"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:padding="16dp"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/channelLogo"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_alignParentStart="true"
                        android:layout_marginEnd="8dp"
                        android:scaleType="centerCrop" />

                    <TextView
                        android:id="@+id/channelName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/channelLogo"
                        android:layout_marginStart="16dp"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/epgText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/channelName"
                        android:layout_toEndOf="@id/channelLogo"
                        android:layout_marginStart="16dp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/btnAudioTracks"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="5dp"
                        android:text="@string/audio"
                        android:drawableLeft="@drawable/ic_audio"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/btnSubtitles"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@id/btnAudioTracks"
                        android:layout_marginEnd="5dp"
                        android:text="@string/subtitles"
                        android:drawableLeft="@drawable/ic_subtitles"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:onClick="showSubtitleTracksDialog" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/leftSidebar"
                    android:layout_width="270dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:background="@color/transparent_gray"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/CategorySideBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:textColor="#2196F3"
                        android:textSize="20sp" />

                    <GridView
                        android:id="@+id/gridViewChannels1"
                        android:layout_width="250dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:columnWidth="85dp"
                        android:horizontalSpacing="8dp"
                        android:numColumns="1"
                        android:padding="15dp"
                        android:scrollbars="none"
                        android:verticalSpacing="8dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/rightSidebar"
                    android:layout_width="320dp"
                    android:layout_height="320dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/rounded_sidebar_background"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:padding="16dp">

                        <ImageView
                            android:id="@+id/channelLogoSide"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center_vertical"
                            android:scaleType="centerCrop"
                            android:layout_marginEnd="16dp" />

                        <TextView
                            android:id="@+id/textViewCurrentChannel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:textColor="#FFFFFF"
                            android:textSize="20sp" />
                    </LinearLayout>
                </LinearLayout>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingTop="0dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/background_channel_epg">

                <TextView
                    android:id="@+id/textViewChannelName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/channel"
                    android:layout_margin="5dp"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:shadowColor="#000000"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/gradient_divider" />

                <TextView
                    android:id="@+id/Epg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_margin="5dp"
                    android:text="@string/epg_no"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:shadowColor="#000000"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="1"
                    android:singleLine="false"
                    android:maxLines="10"
                    android:ellipsize="none" />


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
